--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ body{
    background-color: black;
    color: white;
 }
+
+h1{
+   font-size: 20px;
+}
+
+h2{
+   font-size: 15px;
+}
+
+p{
+   font-size: 10px;
+}
